fix(scroll): refactor Xt.scrollbarWidth and mobile scrollbar

--- a/src/gatsby/assets/styles/_shared.less
+++ b/src/gatsby/assets/styles/_shared.less
@@ -290,6 +290,9 @@
     height: 10px;
     width: 10px;
     background: transparent;
+    @media (hover: none) {
+      display: none;
+    }
   }
   &::-webkit-scrollbar-thumb {
     background: @gray--300;
